--- a/Pasindu Student3/About us/style.css
+++ b/Pasindu Student3/About us/style.css
@@ -83,6 +83,12 @@ body, html{
     transform: translateY(60px);
     transition: 0.5s;
 }
+.editor{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    color: white;
+}
 
 
 
