--- a/Pasindu Student3/Quiz App/style.css
+++ b/Pasindu Student3/Quiz App/style.css
@@ -350,6 +350,12 @@ footer .next_btn:hover{
     cursor: pointer;
     transition: all 0.3s ease;
 }
+.editor{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    color: white;
+}
 
 
 
