--- a/Sanjula Student2/main page/style.css
+++ b/Sanjula Student2/main page/style.css
@@ -14,7 +14,7 @@ li a:hover{
     background-color:black;
 }
 body{
-    background-image: url("pickled-stardust-ELxsvsbGCo4-unsplash.jpg");
+    background-color: #8FD6FF;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
