--- a/Lithira Student1/page 2/page 2/page02.css
+++ b/Lithira Student1/page 2/page 2/page02.css
@@ -4,7 +4,7 @@ body{
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    background-color: lightblue;
+    background-color: #033E61;
     height:auto;
 }
 /*styling the header 1 on the web page*/    
