--- a/Pasindu Student3/About us/style.css
+++ b/Pasindu Student3/About us/style.css
@@ -15,7 +15,7 @@ body, html{
     background: #ddd;
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 189, 223);
+    background-color: #033E61;
 }
 
 .image{
