--- a/Sanjula Student2/main page/style.css
+++ b/Sanjula Student2/main page/style.css
@@ -14,14 +14,27 @@ li a:hover{
     background-color:black;
 }
 body{
-    background-color: #8FD6FF;
+    background-color: #033E61;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    color: white;
 }
 h1{
     text-align: center;
     font-size: 50px;
     color: white;
     text-shadow: 4px 4px blue;
+}
+img{
+	float: right;
+	padding-right: 100px;
+	height: 300px;
+}
+p{
+	font-size: 20px;
+    padding: 10px;
+}
+.editor{
+    color: white;
 }
